<resources>
    <string name="app_name">MyCyberLaw</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_register">Register</string>
    <string name="action_about">About</string>

    <string name="dot_bullet">\u2022</string>
    <string name="big_square_bullet">\u25A0</string>
    <string name="square_bullet">\u25AA</string>
    <string name="copyright">\u00A9</string>
    <string name="trademark">\u2122</string>
    <string name="hint_name">Name</string>
    <string name="hint_matricNum">Matric Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm password</string>
    <string name="btn_register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
